# rust-tutorial

./: .gitignore  README.org
00-ms-tutorial/: rustup.sh
00-ms-tutorial/02-rust-understand-common-concepts/: 0-program-structure.rs  1-variables.rs  2-data-types.rs  3-if-else-expressions.rs  8-loops.rs
00-ms-tutorial/03-rust-error-handling/: 1-fatal-errors-with-panic.rs  2-use-option-type-deal-with-absence.rs  3-exercise-use-option-type.rs  4-use-result-type.rs
00-ms-tutorial/04-rust-memory-management/: 0-what-is-ownership.rs
00-ms-tutorial/06-rust-modules-packages-crates/: 1-split-code-into-modules.rs
01-the-rust-programming-language/13-more-about-cargo-and-crates-io/01-publishing-to-crates-io/02-publish/: Cargo.toml
02-rust-understand-common-concepts/: 4-structs-enums.rs  5-functions.rs  6-exercise-functions.rs  7-collection-types.rs  9-exercise.rs
03-rust-error-handling/5-exercise-use-result-type/: Cargo.toml
05-rust-generic-types-traits/: 0-what-are-generic-data-types.rs  1-define-shared-behavior-with-traits.rs  2-derive.rs  3-trait-bounds.rs  4-iterators.rs  5-exercise-implement-generic-type.rs  6-exercise-implement-iterator.rs
06-rust-modules-packages-crates/0-concepts-code-organization/: 2-my-module.rs
07-rust-automated-tests/0-unit-tests/: Cargo.toml
08-rust-create-command-line-program/rusty-journal/: Cargo.toml
08-rust-create-command-line-program/rusty-journal/src/: main.rs
4-rust-memory-management/: 1-learn-about-borrowing.rs  2-validate-references-with-lifetimes.rs  3-validate-references-with-lifetimes.rs  4-exercise-lifetimes.rs
(+120 files in other folders)
