[package]
name = "rusty-journal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow     = "1.0"    # Flexible concrete Error type built on std::error::Error
home       = "0.5"    # Shared definitions of home directories
structopt  = "0.3"    # Parse command line argument by defining a struct.
serde_json = "1.0"    # A JSON serialization file format

[dependencies.serde]  # Add serde in its own section.
version = "1.0"
features = ["derive"] # We'll need the derive feature.

# Date and time library for Rust
[dependencies.chrono]
version = "0.4"
features = ["serde"]  # We're also going to need the serde feature for the chrono crate, so we can serialize the DateTime field.
